--- a/README.html
+++ b/README.html
@@ -87,7 +87,7 @@
     <h1 id="wasteincineratorservice">WasteIncineratorService</h1>
 <h2 id="intro">Intro</h2>
 <p>WasteIncineratorService is the final project assigned by Prof. <a href="https://github.com/anatali">anatali</a> for the major course of Software Engineering.<br/>
-You can find the requirements of the application <a href="resources/slides/TemaFinale24.html">here</a>.</p>
+You can find the requirements of the application <a href="https://htmlpreview.github.io/?https://github.com/b3nny01/WasteIncineratorService/blob/main/resources/slides/TemaFinale24.html">here</a>.</p>
 <h2 id="qak">QAK</h2>
 <p>The majority of the project has been modeled using QAK (Quasi Actor Kotlin), a meta-model created at UNIBO.
 QAK has its own DSL developed using xText that compiles directly into Kotlin code.<br/>
@@ -98,7 +98,7 @@ QAK allowed us to design the application with a higher level of abstraction, int
 <li>Interactions: abstractions of the main communications strategies (requests, dispatches, events).</li>
 </ul>
 <p>We chose to use QAK because it helps bridge the abstraction gap, allowing us to maintain a higher level of technology independence during the initial phases of development.<br/>
-You can find a detailed description of QAK  <a href="resources/slides/QakActors24.html">here</a>.</p>
+You can find a detailed description of QAK  <a href="https://htmlpreview.github.io/?https://github.com/b3nny01/WasteIncineratorService/blob/main/resources/slides/QakActors24.html">here</a>.</p>
 <h2 id="development-process">Development process</h2>
 <p>We adopted a Scrub inspired development process, where the main assignement was divided in a series of sub-problems each faced during in a Sprint.<br/>
 At the end of each Sprint we produced an executable version of the system covering some of the requirements.</p>
@@ -130,8 +130,8 @@ At the end of each Sprint we produced an executable version of the system coveri
         </td>
         <td>
             <img src="resources/imgs/readmeLogo.svg" height="15px"/> <a href="./WIS_Sprint0/userDocs/sprint0_v1.md">sprint0.md</a><br/>
-            <img src="resources/imgs/pdfLogo.png" height="15px"/> <a href="./WIS_Sprint0/userDocs/sprint0_v1.pdf" title="sprint0.pdf" download>sprint0.pdf</a>
-            <img src="resources/imgs/htmlLogo.png" height="15px"/> <a href="./WIS_Sprint0/userDocs/sprint0_v1.html" title="sprint0.html" download>sprint0.html</a>
+            <img src="resources/imgs/pdfLogo.png" height="15px"/> <a href="https://htmlpreview.github.io/?https://github.com/b3nny01/WasteIncineratorService/blob/main/WIS_Sprint0/userDocs/sprint0_v1.pdf" title="sprint0.pdf" download>sprint0.pdf</a><br/>
+            <img src="resources/imgs/htmlLogo.png" height="15px"/> <a href="https://htmlpreview.github.io/?https://github.com/b3nny01/WasteIncineratorService/blob/main/WIS_Sprint0/userDocs/sprint0_v1.html" title="sprint0.html" download>sprint0.html</a>
         </td>
     </tr>
 </table>
