--- a/README.html
+++ b/README.html
@@ -134,6 +134,22 @@ At the end of each Sprint we produced an executable version of the system coveri
             <img src="resources/imgs/htmlLogo.png" height="15px"/> <a href="https://htmlpreview.github.io/?https://github.com/b3nny01/WasteIncineratorService/blob/main/WIS_Sprint0/userDocs/sprint0_v1.html" title="sprint0.html" download>sprint0.html</a>
         </td>
     </tr>
+    <tr>
+        <td>
+            <a href="./WIS_Sprint1/">WIS_Sprint1</a>
+        </td>
+        <td>
+            OpRobot and WIS respondibilities and buisness logic, first working prototype in virtual environment.
+        </td>
+        <td>
+            <a href="./WIS_Sprint1/src/sprint1.qak">sprint1.qak</a>
+        </td>
+        <td>
+            <img src="resources/imgs/readmeLogo.svg" height="15px"/> <a href="WIS_Sprint1/userDocs/sprint1.md">sprint1.md</a><br/>
+            <img src="resources/imgs/pdfLogo.png" height="15px"/> <a href="https://nbviewer.org/github/b3nny01/WasteIncineratorService/blob/main/WIS_Sprint1/userDocs/sprint1.pdf" title="sprint1.pdf" download>sprint1.pdf</a><br/>
+            <img src="resources/imgs/htmlLogo.png" height="15px"/> <a href="https://htmlpreview.github.io/?https://github.com/b3nny01/WasteIncineratorService/blob/main/WIS_Sprint1/userDocs/sprint1.html" title="sprint1.html" download>sprint1.html</a>
+        </td>
+    </tr>
 </table>
 <h2 id="usage">Usage</h2>
 <h2 id="credits">Credits</h2>
