--- a/README.html
+++ b/README.html
@@ -122,7 +122,7 @@ At the end of each Sprint we produced an executable version of the system coveri
         <td>
             <a href="./WIS_Sprint0/">WIS_Sprint0</a>
         </td>
-        <td>
+        <td width="300px">
             requirements analysis
         </td>
         <td>
@@ -138,7 +138,7 @@ At the end of each Sprint we produced an executable version of the system coveri
         <td>
             <a href="./WIS_Sprint1/">WIS_Sprint1</a>
         </td>
-        <td>
+        <td width="300px">
             OpRobot and WIS respondibilities and buisness logic, first working prototype in virtual environment.
         </td>
         <td>
