--- a/WIS_Sprint1/userDocs/sprint1.html
+++ b/WIS_Sprint1/userDocs/sprint1.html
@@ -103,29 +103,18 @@ in this sprint we will focus on the relationship between WIS and OpRobot, our go
 <li>producing a simple prototype of the system reproducing the functioning of this two entities</li>
 </ul>
 <h2 id="problem-analysis">Problem Analysis</h2>
-<h3 id="oprobot-and-wis">OpRobot and WIS</h3>
-<p>When considering how to divide the business logic between components, we identified two main approaches:</p>
-<ul>
-<li><strong>Centralized Solution</strong>: In this approach, the OpRobot functions as a simple POJO, acting as an executor for WIS. WIS takes responsibility for monitoring the system's state and instructs the OpRobot to move accordingly.</li>
-<li><strong>Distributed Solution</strong>: Here, the OpRobot is designed as an Actor that interacts with WIS. The OpRobot requests WIS, which observes the system's state, to confirm whether conditions for movement are met. If they are, the OpRobot initiates an 'OpRobot Cycle,' which includes obtaining an RP, incinerating it, and transporting the ashes to ashStorage.</li>
-</ul>
-<h3 id="pro-e-contro">Pro e Contro</h3>
-<ul>
-<li>Centralizzato:
-<ul>
-<li>
-<ul>
-<li>logica di buinsess concentrata</li>
-</ul>
-</li>
-<li>
-<ul>
-<li>(poco estendibile)</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
+<p>Questa sezione ha come scopo definire la relazione che sussiste tra WIS e OpRobot, in particolare come suddividere la business logic tra questi due componenti e di conseguenza decidere come classificare OpRobot (POJO o Actor). Al termine di questo Sprint sara' disponibile un primo prototipo del sistema funzionante.</p>
+<h3 id="wis-and-oprobot">WIS and OpRobot</h3>
+<p>Based on the requirements, we understand that the code for controlling the basic robot is provided by the client. Specifically, the basic robot is modeled as a service that can be interacted with through messages such as <code>moverobot: moverobot(TARGETX, TARGETY)</code> after engagement.</p>
+<p>The BasicRobot autonomously handles movement requests to specific coordinates using an internal representation of the ServiceArea as a set of cells with a size of DR. Therefore, it is the responsibility of the WIS to store the coordinates of each point of interest in order to control the BasicRobot.</p>
+<p>It remains to be determined whether it is truly necessary to model the OpRobot, or if its responsibilities can be incorporated into the WIS. Introducing an additional actor, OpRobot, which controls the basic robot and is managed by the WIS, would not significantly improve the isolation of responsibilities. On the contrary, it could create confusion regarding the division of business logic among the various actors.</p>
+<p>For this reason, at this stage, it is more practical to keep the business logic concentrated solely within the WIS, without modeling the OpRobot. However, this decision may be subject to change in the future if the analysis reveals new responsibilities for the WIS, making it necessary to separate tasks (Single Responsibility Principle).</p>
+<h3 id="system-observability">System Observability</h3>
+<p>da requisiti il WIS necessita di essere notificato in caso di determinati cambiamenti di stato del sistema (ad esempio l' endOfBurining dell'Incinerator).
+Questo sottointende la necessità di modellare una qualche forma di comunicazione tra i vari componenti del sistema (Scale, MonitoringDevice ed Incinerator) ed il WIS stesso.
+una prima soluzione potrebbe essere quella di prevedere un serie di richieste di stato effettuate dal WIS ai singoli componenti, tuttavia questo approccio si rivela inefficace in quanto prevede che il WIS 'sprechi' molto tempo di calcolo nell'interrogare i vari componenti.
+risulta invece meno dispendioso adottare il pattern observer facendo sì che siano i componenti stessi ad avvisare il WIS in caso di cambiamenti di stato.
+Tuttavia il compito del WIS consiste principalmente nel pilotare il BasicRobot, pertanto non è interessato a tutte le modifche di stato del sistema, gli basta sapere che le condizioni per dare inizio ad un ciclo di movimento dell'OpRobot siano verificate per questo motivo si consiglia l'introduzione di un nuovo attore WIS_Observer che si occupi di osservare il sistema per intero e di notificare il WIS in merito alla validità tali condizioni</p>
 <h2 id="future-sprints">Future Sprints</h2>
 
 </body>
