--- a/WIS_Sprint1/userDocs/sprint0_v1.html
+++ b/WIS_Sprint1/userDocs/sprint0_v1.html
@@ -229,12 +229,12 @@ We will make the assumption that each port in the ServiceArea has dimension of o
   <th><b>Expected Behavior</b></th>
 </tr>
 <tr>
-  <td><b>test_ok_1_rp</b></td>
-  <td>WasteStorage contains 1 RP, AshStorge is empty, nobody empties AshStorage</td>
-  <td>After some time WasteStorage is empty and AshStorage level increased</td>
+  <td><b>testIncinineratorActivation</b></td>
+  <td>WasteStorage contains 4 RP, AshStorge is empty, nobody empties AshStorage, Incinerator is inactive</td>
+  <td>Once the system is inictialized, Incinerator is active</td>
 </tr>
 <tr> 
-  <td><b>test_ok_4_rp</b></td>
+  <td><b>TestOk4Rp</b></td>
   <td>WasteStorage contains 4 RP, AshStorge is empty and can contain the ashes of 3 RPs, nobody empties AshStorage</td>
   <td>After some time WasteStorage contains 1 RP and AshStorage is full</td>
 </tr>
