--- a/WIS_Sprint1/userDocs/sprint1.html
+++ b/WIS_Sprint1/userDocs/sprint1.html
@@ -116,8 +116,26 @@ However, since the current prototype operates in a purely virtual environment, i
 For this reason, we have decided to introduce two specific events, LoadRP and UnloadAsh, which modify the state of the Scale and MonitoringDevice, respectively.</p>
 <h2 id="implementation">Implementation</h2>
 <h3 id="system-architecture">System Architecture</h3>
-<p>based on the Problem Analysis carried on we implemented an executable version of the system covering the discussed features, we attach here a visual representation of the system architecture:</p>
-<img src="resources/imgs/wis_systemarch.png"/>
+<p>based on the Problem Analysis carried on we implemented an executable version of the system covering the discussed features, we attach here a visual representation of the system architecture:
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<img src="resources/imgs/wis_systemarch.png" width="1100px"/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/></p>
 <h2 id="test-plan">Test Plan</h2>
 <p><strong>Test Class</strong>: <a href="../src/main/java/test/WISTest.java">WISTest</a></p>
 <table>
@@ -132,7 +150,7 @@ For this reason, we have decided to introduce two specific events, LoadRP and Un
   <td>Once the system is inictialized, Incinerator is active</td>
 </tr>
 <tr> 
-  <td><b>TestOk4Rp</b></td>
+  <td><b>testOk4Rp</b></td>
   <td>WasteStorage contains 4 RP, AshStorge is empty and can contain the ashes of 3 RPs, nobody empties AshStorage</td>
   <td>After some time WasteStorage contains 1 RP and AshStorage is full</td>
 </tr>
