--- a/WIS_Sprint1/userDocs/sprint1.html
+++ b/WIS_Sprint1/userDocs/sprint1.html
@@ -153,7 +153,7 @@ To do so open another terminal inside the <code>unibo.basicrobot24</code> folder
 <p><strong>N.B.</strong> Type <code>gradlew test</code> if you want to launch JUnit tests instead of activating the system demo.</p>
 <h2 id="future-sprints">Future Sprints</h2>
 <p>In the next sprint, we will focus on the MonitoringDevice's behavior.<br/>
-Our goal is to connect the actual prototype of the system to a real monitoring device deployied on a raspberry.</p>
+Our goal is to connect the actual prototype of the system to a real monitoring device deployed on a real raspberry.</p>
 
 </body>
 
