--- a/WIS_Sprint2/userDocs/sprint2.html
+++ b/WIS_Sprint2/userDocs/sprint2.html
@@ -88,39 +88,44 @@
 <h1 id="waste-incinerator-service">Waste Incinerator Service</h1>
 <h2 id="sprint-info">Sprint info</h2>
 <table>
-<tr><th>Sprint name</th><td>Sprint 1</td></tr>
-<tr><th>Previous sprint</th><td><a href="/WIS_Sprint0">Sprint 0</a></td></tr>
+<tr><th>Sprint name</th><td>Sprint 2</td></tr>
+<tr><th>Previous sprint</th><td><a href="/WIS_Sprint1">Sprint 1</a></td></tr>
 <tr><th>Next sprint</th><td></td></tr>
-<tr><th>QAK model</th><td><a href="../src/sprint1.qak">sprint1.qak</a></td></tr>
+<tr><th>QAK model</th><td><a href="../src/sprint2.qak">sprint2.qak</a></td></tr>
 <tr><th>Developed by</th><td>Alessio Benenati<br/>Giulia Fattori</td></tr>
 <tr><th>Repo Site</th><td><a href="https://github.com/b3nny01/WasteIncineratorService">WasteIncineratorService</td><tr>
 </table>
 <h2 id="sprint-starting-condition-and-goals">Sprint Starting Condition and Goals</h2>
-<p>In the previous sprint, we focused on requirements analysis and produced a simple base architecture of what could be inferred from the assignment text.
-In this one we will focus on the relationship between WIS and OpRobot, our goals are:</p>
-<ul>
-<li>finding the best way to divide the business logic between the OpRobot and the WIS actor</li>
-<li>consequently choosing the right model (<strong>Actor</strong> or <strong>POJO</strong>) for the OpRobot</li>
-<li>producing a simple prototype of the system reproducing the functioning of these two entities</li>
-</ul>
+<p>In the previous sprint, we focused on studying the requirements related to the application logic of OpRobot and WIS.<strong>In this sprint, the focus is on the MonitoringDevice</strong>, specifically aiming to <strong>connect the virtual system</strong> produced in sprint 1 <strong>to a real MonitoringDevice</strong> deployed on a physical Raspberry Pi.</p>
 <h2 id="problem-analysis">Problem Analysis</h2>
-<h3 id="wis-and-system-observability">WIS and system observability</h3>
-<p>Based on the requirements, the user interacts with the WIS not to change the system's state but to monitor it. From this, it can be deduced that the WIS must be able to retrieve information on the state of each system component. For this purpose, <strong>it makes sense to make the WIS an observer of each component</strong>.</p>
-<h3 id="wis-and-oprobot">WIS and OpRobot</h3>
-<p><strong>Regarding the OpRobot the requirements do not provide enough information to determine with certainty how to model it</strong>. In particular, it is stated that the behavior actuator of the OpRobot is the DDRRobot, which is provided by the client as a <strong>service</strong> (<a href="/unibo.basicrobot24/">BasicRobot</a>). However, it is not specified whether this should be controlled by an autonomous actor or whether the WIS itself could control the BasicRobot.</p>
-<p>At first glance, one might think that having the WIS control the DDRRobot could be a good idea because the execution cycle of the OpRobot requires observing the system's state to verify the initial conditions, and this information is already present in the WIS as it acts as an observer.</p>
-<p>However, a more in-depth analysis reveals that OpRobot actually needs to verify the initial conditions only at two specific moments (at the beginning and the end of an execution cycle) and would not gain significant advantages from continuously observing the state of the entire system (which would significantly increase the complexity of the WIS actor, which would have to both control the DDRRobot and update its internal representation of the system's state).</p>
-<p>For these reasons, it is more convenient to <strong>apply the Single Responsibility Principle by incorporating the logic for controlling the DDRRobot into a dedicated actor, the BasicRobot</strong>, which communicates with the WIS to ensure that the initial conditions are verified.</p>
-<h3 id="loadrp-and-unloadash">LoadRP and UnloadAsh</h3>
-<p>In a real system, <strong>the OpRobot should be able to load and unload the RPs and their ashes</strong>, and such changes to the system would be detected by the respective sensors (Scale and MonitoringDevice) without the need to exchange messages at the software level.<br/>
-However, <strong>since the current prototype operates in a purely virtual environment, it is necessary to simulate these two actions</strong> by sending appropriate messages.<br/>
-For this reason, we have decided to introduce two specific events, LoadRP and UnloadAsh, which modify the state of the Scale and MonitoringDevice, respectively.</p>
+<h3 id="monitoringdevice-subcomponents">MonitoringDevice subcomponents</h3>
+<p>In the previous sprints, we hid the complexity of the monitoring device in a single mock actor without worrying about its subcomponents (LED and Sonar).<br>
+A more in-depth study of the component's application logic reveals two possible approaches:</p>
+<ul>
+<li>Developing a single MonitoringDevice actor responsible for both managing the LED and emitting data from the Sonar.</li>
+<li>Breaking down the MonitoringDevice into two distinct actors, the LED and the Sonar.</li>
+</ul>
+<p>The second solution allows for greater decoupling between the two components, especially considering their different nature (the Sonar is a &quot;producer&quot; of information while the LED acts as a &quot;consumer&quot;).<br>
+For this reason, it is recommended to <strong>decompose the MonitoringDevice into its two subcomponents (LED and Sonar) and implement them as two independent actors in the same context</strong>.</p>
+<h3 id="analysis-architecture">Analysis Architecture</h3>
+<p>Below, we present a comparison between the system architecture derived from the problem analysis in sprint 1 and the one resulting from sprint 2.</p>
+<p><strong>Sprint 1 Architecture</strong>
+<img src="./resources/imgs/wis_system_1.png" width="550px"></p>
+<p><strong>Sprint 2 Architecture</strong>
+<img src="./resources/imgs/wis_system_1.png" width="550px"></p>
 <h2 id="project">Project</h2>
 <h3 id="system-architecture">System Architecture</h3>
 <p>Based on the Problem Analysis carried out previously, we implemented an executable version of the system covering the discussed features; we attach here a visual representation of the system architecture:</p>
-<img src="resources/imgs/wis_systemarch.png" width="1100px"/>
+<img src="resources/imgs/wis_system.png" width="1100px"/>
 <h2 id="implementation">Implementation</h2>
-<p>During the implementation phase no particular need of additions to the inital project emerged, so the system architecture remained unchanged.</p>
+<h3 id="sonar-pipeline">Sonar Pipeline</h3>
+<p>During the implementation, we encountered the high sensitivity of the Sonar, which often produces &quot;noisy&quot; data. For this reason, it became necessary to introduce a &quot;Filtering Pipeline&quot; to eliminate spurious data.</p>
+<p>Specifically, this pipeline is composed of three actors:</p>
+<ul>
+<li><strong>SonarDevice</strong>, which handles the actual reading of all data from the physical sonar.</li>
+<li><strong>DataCleaner</strong>, which monitors the SonarDevice and filters the relevant results for the problem, aiming to minimize the effect of measurement errors.</li>
+<li><strong>Sonar</strong>, which serves as the &quot;interface&quot; towards the WIS.</li>
+</ul>
 <h2 id="test-plan">Test Plan</h2>
 <p><strong>Test Class</strong>: <a href="../src/main/java/test/WISTest.java">WISTest</a></p>
 <table>
