--- a/MD_Sprint2/userDocs/sprint2.html
+++ b/MD_Sprint2/userDocs/sprint2.html
@@ -110,9 +110,10 @@ For this reason, it is recommended to <strong>decompose the MonitoringDevice int
 <h3 id="analysis-architecture">Analysis Architecture</h3>
 <p>Below, we present a comparison between the system architecture derived from the problem analysis in sprint 1 and the one resulting from sprint 2.</p>
 <p><strong>Sprint 1 Architecture</strong>
-<img src="./resources/imgs/wis_system_1.png" width="550px"></p>
+<img src="./resources/imgs/wis_system_1.png" width="550px"/></p>
 <p><strong>Sprint 2 Architecture</strong>
-<img src="./resources/imgs/wis_system_1.png" width="550px"></p>
+<img src="./resources/imgs/wis_system_2.png" width="550px"/>
+<img src="./resources/imgs/monitoring_device_2.png" width="550px"/></p>
 <h2 id="project">Project</h2>
 <h3 id="system-architecture">System Architecture</h3>
 <p>Based on the Problem Analysis carried out previously, we implemented an executable version of the system covering the discussed features; we attach here a visual representation of the system architecture:</p>
