--- a/WIS_Sprint2/userDocs/sprint2.html
+++ b/WIS_Sprint2/userDocs/sprint2.html
@@ -109,10 +109,14 @@ A more in-depth study of the component's application logic reveals two possible 
 For this reason, it is recommended to <strong>decompose the MonitoringDevice into its two subcomponents (LED and Sonar) and implement them as two independent actors in the same context</strong>.</p>
 <h3 id="analysis-architecture">Analysis Architecture</h3>
 <p>Below, we present a comparison between the system architecture derived from the problem analysis in sprint 1 and the one resulting from sprint 2.</p>
-<p><strong>Sprint 1 Architecture:</strong></p>
-<img src="./resources/imgs/wis_system_1.png" width="550px">
-<p><strong>Sprint 2 Architecture:</strong></p>
-<img src="./resources/imgs/wis_system_2.png" width="550px"/>
+<p><strong>Sprint 1 Architecture:</strong>
+<br/>
+<img src="./resources/imgs/wis_system_1.png" width="1100px">
+<br/></p>
+<p><strong>Sprint 2 Architecture:</strong>
+<br/>
+<img src="./resources/imgs/wis_system_2.png" width="1100px"/>
+<br/></p>
 <h2 id="project">Project</h2>
 <h3 id="project-architecture">Project Architecture</h3>
 <p>Based on the Problem Analysis carried out previously, we implemented an executable version of the system covering the discussed features; we attach here a visual representation of the system architecture:</p>
